Adding rbac_cache_ttl to status endpoint. (#931)
